--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -918,13 +918,42 @@ K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 K2Node_VariableGet.Events=True
 TimerActor_C.Default=True
+Launcher_C.Tick=True
+Launcher_C.Replication=True
+Launcher_C.Rendering=True
+Launcher_C.Collision=True
+Launcher_C.Actor=True
+Launcher_C.Input=True
+Pistol_C.Tick=True
+Pistol_C.Default=True
+Launcher_C.TransformCommon=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
-OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerDisplay.TimerDisplay
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Launcher.Launcher
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Pistol.Pistol
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -986,7 +1015,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1292.800 Y=732.800
 None=======
 InitiallyMaximized=True
 
@@ -2125,26 +2154,26 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem1=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem2=/Game/VRTemplate/Blueprints/Timer
-MRUItem3=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem4=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem5=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem6=/Game/VRTemplate/Blueprints/target
-MRUItem7=/Game/VRTemplate/Blueprints/Baseball
-MRUItem8=/Game/VRTemplate/Audio/Music
-MRUItem9=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem10=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem11=/Game/VRTemplate/Blueprints/Music
-MRUItem12=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem13=/Game/VRTemplate/Blueprints/Menu
-MRUItem14=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem15=/Game/Baseball/baseball
-MRUItem16=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem17=/Game/Baseball/Scene_-_Root
-MRUItem18=/Game/Meshes/BaseballBatWithPhysics
-MRUItem19=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem0=/Game/VRTemplate/Blueprints/Baseball
+MRUItem1=/Game/VRTemplate/Blueprints/Pistol
+MRUItem2=/Game/VRTemplate/Blueprints/Launcher
+MRUItem3=/Game/VRTemplate/Blueprints/Timer
+MRUItem4=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem5=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem6=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem7=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem8=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem9=/Game/VRTemplate/Blueprints/target
+MRUItem10=/Game/VRTemplate/Audio/Music
+MRUItem11=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem12=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem13=/Game/VRTemplate/Blueprints/Music
+MRUItem14=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem15=/Game/VRTemplate/Blueprints/Menu
+MRUItem16=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem17=/Game/Baseball/baseball
+MRUItem18=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem19=/Game/Baseball/Scene_-_Root
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2171,6 +2200,7 @@ SceneComponent=
 ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Launcher.Launcher;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Timer.Timer;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/TimerActor.TimerActor;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
@@ -2423,4 +2453,6 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 VRTemplateMap_C=StaticMeshComponent.Collision.Collision,
+Pistol_C=StaticMeshComponent.Collision.Collision,
+Launcher_C=StaticMeshComponent.Collision.Collision,
 
