--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -949,11 +949,13 @@ SkeletalMeshComponent.ComponentReplication=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Launcher.Launcher
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Pistol.Pistol
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1015,7 +1017,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1294.400 Y=734.400
 None=======
 InitiallyMaximized=True
 
@@ -1066,7 +1068,7 @@ UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/C
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
-GenericImport=../../../../../../Users/andy/OneDrive/Desktop/worn-baseball-ball/source/baseball_ball_01.fbx
+GenericImport=../../../../../../Users/sari/Desktop/Ue4Extractions/source/Baseball Field.fbx
 GenericExport=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 GenericOpen=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 GenericSave=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -2151,13 +2153,13 @@ bConvertSceneUnit=False
 None=======
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Baseball
-MRUItem1=/Game/VRTemplate/Blueprints/Pistol
-MRUItem2=/Game/VRTemplate/Blueprints/Launcher
-MRUItem3=/Game/VRTemplate/Blueprints/Timer
+MRUItem0=/Game/VRTemplate/Blueprints/Timer
+MRUItem1=/Game/VRTemplate/Blueprints/Launcher
+MRUItem2=/Game/VRTemplate/Blueprints/Baseball
+MRUItem3=/Game/VRTemplate/Blueprints/Pistol
 MRUItem4=/Game/VRTemplate/Blueprints/TimerDisplay
 MRUItem5=/Game/VRTemplate/Blueprints/TimerActor
 MRUItem6=/Game/VRTemplate/Blueprints/Scoreboardactor
@@ -2200,6 +2202,9 @@ SceneComponent=
 ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_Bases.Baseball_Field_Bases;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_Field.Baseball_Field_Field;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_White_Lines.Baseball_Field_White_Lines;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Launcher.Launcher;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Timer.Timer;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/TimerActor.TimerActor;
@@ -2441,18 +2446,19 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [DetailCustomWidgetExpansion]
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+StaticMeshComponent=
 SceneComponent=StaticMeshComponent.Collision.Collision,
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
 Timer_C=
-PropertyWrapper=StaticMeshComponent.Collision.Collision,
+PropertyWrapper=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 TimerDisplay_C=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 VRTemplateMap_C=StaticMeshComponent.Collision.Collision,
 Pistol_C=StaticMeshComponent.Collision.Collision,
-Launcher_C=StaticMeshComponent.Collision.Collision,
+Launcher_C=
+Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
 
