Final widget created
Displays final score

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -951,11 +951,21 @@ SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+FinalWidget_C.Appearance=True
+FinalWidget_C.Designer=True
+FinalWidget_C.Input=True
+FinalWidget_C.Interaction=True
+FinalWidget_C.Performance=True
+FinalWidget_C.Layout=True
+FinalWidget_C.Behavior=True
+FinalWidget_C.Render Transform=True
+FinalWidget_C.Accessibility=True
+FinalWidget_C.Clipping=True
+FinalWidget_C.Navigation=True
+FinalWidget_C.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Launcher.Launcher
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1017,7 +1027,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1294.400 Y=734.400
+WindowSize=X=1296.000 Y=736.000
 None=======
 InitiallyMaximized=True
 
@@ -1046,7 +1056,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Widgets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2156,32 +2166,32 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Timer
-MRUItem1=/Game/VRTemplate/Blueprints/Launcher
-MRUItem2=/Game/VRTemplate/Blueprints/Baseball
-MRUItem3=/Game/VRTemplate/Blueprints/Pistol
-MRUItem4=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem5=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem6=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem7=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem8=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem9=/Game/VRTemplate/Blueprints/target
-MRUItem10=/Game/VRTemplate/Audio/Music
-MRUItem11=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem12=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem13=/Game/VRTemplate/Blueprints/Music
-MRUItem14=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem15=/Game/VRTemplate/Blueprints/Menu
-MRUItem16=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem17=/Game/Baseball/baseball
-MRUItem18=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem19=/Game/Baseball/Scene_-_Root
+MRUItem0=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem1=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem2=/Game/VRTemplate/Blueprints/Timer
+MRUItem3=/Game/VRTemplate/Blueprints/Launcher
+MRUItem4=/Game/VRTemplate/Blueprints/Baseball
+MRUItem5=/Game/VRTemplate/Blueprints/Pistol
+MRUItem6=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem7=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem8=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem9=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem10=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem11=/Game/VRTemplate/Blueprints/target
+MRUItem12=/Game/VRTemplate/Audio/Music
+MRUItem13=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem14=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem15=/Game/VRTemplate/Blueprints/Music
+MRUItem16=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem17=/Game/VRTemplate/Blueprints/Menu
+MRUItem18=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem19=/Game/Baseball/baseball
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-Object=
+Object="\"Object.Appearance.Font\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2255,6 +2265,8 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Scoreboard.Scoreboard=1
 /Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor=1
 /Game/VRTemplate/Blueprints/TimerActor.TimerActor=1
+/Game/VRTemplate/Widgets/FinalWidget.FinalWidget=1
+/Game/VRTemplate/Widgets/Scoreboard.Scoreboard=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2461,4 +2473,5 @@ VRTemplateMap_C=StaticMeshComponent.Collision.Collision,
 Pistol_C=StaticMeshComponent.Collision.Collision,
 Launcher_C=
 Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
+FinalWidget_C=
 
