Added Loss widget
Still need to add functionality to buttons

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -963,6 +963,27 @@ FinalWidget_C.Accessibility=True
 FinalWidget_C.Clipping=True
 FinalWidget_C.Navigation=True
 FinalWidget_C.Localization=True
+NewWidgetBlueprint_C.Appearance=True
+NewWidgetBlueprint_C.Input=True
+NewWidgetBlueprint_C.Accessibility=True
+NewWidgetBlueprint_C.Interaction=True
+NewWidgetBlueprint_C.Behavior=True
+NewWidgetBlueprint_C.Render Transform=True
+NewWidgetBlueprint_C.Performance=True
+NewWidgetBlueprint_C.Clipping=True
+NewWidgetBlueprint_C.Navigation=True
+NewWidgetBlueprint_C.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1027,7 +1048,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1297.600 Y=737.600
 None=======
 InitiallyMaximized=True
 
@@ -2166,26 +2187,26 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem1=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem2=/Game/VRTemplate/Blueprints/Timer
-MRUItem3=/Game/VRTemplate/Blueprints/Launcher
-MRUItem4=/Game/VRTemplate/Blueprints/Baseball
-MRUItem5=/Game/VRTemplate/Blueprints/Pistol
-MRUItem6=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem7=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem8=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem9=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem10=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem11=/Game/VRTemplate/Blueprints/target
-MRUItem12=/Game/VRTemplate/Audio/Music
-MRUItem13=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem14=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem15=/Game/VRTemplate/Blueprints/Music
-MRUItem16=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem17=/Game/VRTemplate/Blueprints/Menu
-MRUItem18=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem19=/Game/Baseball/baseball
+MRUItem0=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem1=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem2=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem3=/Game/VRTemplate/Blueprints/Timer
+MRUItem4=/Game/VRTemplate/Blueprints/Launcher
+MRUItem5=/Game/VRTemplate/Blueprints/Baseball
+MRUItem6=/Game/VRTemplate/Blueprints/Pistol
+MRUItem7=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem8=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem9=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem10=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem11=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem12=/Game/VRTemplate/Blueprints/target
+MRUItem13=/Game/VRTemplate/Audio/Music
+MRUItem14=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem15=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem16=/Game/VRTemplate/Blueprints/Music
+MRUItem17=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem18=/Game/VRTemplate/Blueprints/Menu
+MRUItem19=/Game/VRTemplate/Blueprints/BaseballBat
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2267,6 +2288,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/TimerActor.TimerActor=1
 /Game/VRTemplate/Widgets/FinalWidget.FinalWidget=1
 /Game/VRTemplate/Widgets/Scoreboard.Scoreboard=1
+/Game/VRTemplate/Widgets/NewWidgetBlueprint.NewWidgetBlueprint=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
