--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -984,9 +984,28 @@ Button.Clipping=True
 Button.Navigation=True
 Button.Localization=True
 Button.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+FinalActor_C.Tick=True
+FinalActor_C.Replication=True
+FinalActor_C.Rendering=True
+FinalActor_C.Collision=True
+FinalActor_C.Actor=True
+FinalActor_C.Input=True
+FinalActor_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/VRTemplate/Widgets/FinalWidget.FinalWidget
+OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/FinalActor.FinalActor
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1039,6 +1058,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem1=/Game/VRTemplate/Maps/MainMenuLevel
 
 [PluginBrowser]
 InstalledPlugins=LPSPSample
@@ -1048,7 +1068,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1297.600 Y=737.600
+WindowSize=X=1297.000 Y=737.000
 None=======
 InitiallyMaximized=True
 
@@ -1077,7 +1097,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1095,7 +1115,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
+UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -1105,7 +1125,7 @@ GenericOpen=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRP
 GenericSave=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 MeshImportExport=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 WorldRoot=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
-Level=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
+Level=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
 Project=C:/Program Files/Epic Games/UE_4.27/
 
 [ModuleFileTracking]
@@ -2028,6 +2048,8 @@ TextureEditor.TimeStamp=2022.01.31-19.03.56
 TextureEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2022.02.07-07.08.57
 SequencerWidgets.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2022.01.31-19.03.54
+NewLevelDialog.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2187,32 +2209,32 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Widgets/NewWidgetBlueprint
-MRUItem1=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem2=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem0=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem1=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem2=/Game/VRTemplate/Blueprints/VRGameMode
 MRUItem3=/Game/VRTemplate/Blueprints/Timer
-MRUItem4=/Game/VRTemplate/Blueprints/Launcher
-MRUItem5=/Game/VRTemplate/Blueprints/Baseball
-MRUItem6=/Game/VRTemplate/Blueprints/Pistol
-MRUItem7=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem8=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem9=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem10=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem11=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem12=/Game/VRTemplate/Blueprints/target
-MRUItem13=/Game/VRTemplate/Audio/Music
-MRUItem14=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem15=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem16=/Game/VRTemplate/Blueprints/Music
-MRUItem17=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem18=/Game/VRTemplate/Blueprints/Menu
-MRUItem19=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem4=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem5=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem6=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem7=/Game/VRTemplate/Blueprints/Launcher
+MRUItem8=/Game/VRTemplate/Blueprints/Baseball
+MRUItem9=/Game/VRTemplate/Blueprints/Pistol
+MRUItem10=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem11=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem12=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem13=/Game/VRTemplate/Blueprints/target
+MRUItem14=/Game/VRTemplate/Audio/Music
+MRUItem15=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem16=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem17=/Game/VRTemplate/Blueprints/Music
+MRUItem18=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem19=/Game/VRTemplate/Blueprints/Menu
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-Object="\"Object.Appearance.Font\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2224,8 +2246,8 @@ StreamableRenderAsset=
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -2233,6 +2255,7 @@ SceneComponent=
 ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/FinalActor.FinalActor;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_Bases.Baseball_Field_Bases;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_Field.Baseball_Field_Field;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_White_Lines.Baseball_Field_White_Lines;
@@ -2481,7 +2504,7 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=
-SceneComponent=StaticMeshComponent.Collision.Collision,
+SceneComponent=
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
@@ -2491,9 +2514,11 @@ TimerDisplay_C=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
-VRTemplateMap_C=StaticMeshComponent.Collision.Collision,
+VRTemplateMap_C=
 Pistol_C=StaticMeshComponent.Collision.Collision,
 Launcher_C=
 Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
 FinalWidget_C=
+FinalActor_C=StaticMeshComponent.Collision.Collision,
+VRGameMode_C=K2Node_FunctionEntry.Inputs.InputArgument0,
 
