--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1000,12 +1000,10 @@ FinalActor_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Widgets/FinalWidget.FinalWidget
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
+OpenAssetsAtExit=/Game/VRTemplate/Widgets/TimerDisplay.TimerDisplay
 OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/FinalActor.FinalActor
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1068,7 +1066,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1297.000 Y=737.000
+WindowSize=X=1298.400 Y=738.400
 None=======
 InitiallyMaximized=True
 
@@ -1097,7 +1095,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Widgets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1115,7 +1113,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
+UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -2209,26 +2207,26 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem1=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem2=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem3=/Game/VRTemplate/Blueprints/Timer
-MRUItem4=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem5=/Game/VRTemplate/Widgets/NewWidgetBlueprint
-MRUItem6=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem7=/Game/VRTemplate/Blueprints/Launcher
-MRUItem8=/Game/VRTemplate/Blueprints/Baseball
-MRUItem9=/Game/VRTemplate/Blueprints/Pistol
-MRUItem10=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem11=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem12=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem13=/Game/VRTemplate/Blueprints/target
-MRUItem14=/Game/VRTemplate/Audio/Music
-MRUItem15=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem16=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem17=/Game/VRTemplate/Blueprints/Music
-MRUItem18=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem19=/Game/VRTemplate/Blueprints/Menu
+MRUItem0=/Game/VRTemplate/Blueprints/Timer
+MRUItem1=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem2=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem3=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem4=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem5=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem6=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem7=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem8=/Game/VRTemplate/Blueprints/Launcher
+MRUItem9=/Game/VRTemplate/Blueprints/Baseball
+MRUItem10=/Game/VRTemplate/Blueprints/Pistol
+MRUItem11=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem12=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem13=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem14=/Game/VRTemplate/Blueprints/target
+MRUItem15=/Game/VRTemplate/Audio/Music
+MRUItem16=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem17=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem18=/Game/VRTemplate/Blueprints/Music
+MRUItem19=/Game/VRTemplate/Blueprints/WidgetMenu
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2508,13 +2506,13 @@ SceneComponent=
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
-Timer_C=
+Timer_C=StaticMeshComponent.Collision.Collision,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 TimerDisplay_C=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
-VRTemplateMap_C=
+VRTemplateMap_C=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 Pistol_C=StaticMeshComponent.Collision.Collision,
 Launcher_C=
 Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
