--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -997,13 +997,21 @@ FinalActor_C.Collision=True
 FinalActor_C.Actor=True
 FinalActor_C.Input=True
 FinalActor_C.TransformCommon=True
+Launcher_C.Default=True
+Projectile_C.Tick=True
+Projectile_C.Replication=True
+Projectile_C.Rendering=True
+Projectile_C.Actor=True
+Projectile_C.Collision=True
+Projectile_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
-OpenAssetsAtExit=/Game/VRTemplate/Widgets/TimerDisplay.TimerDisplay
-OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Baseball.Baseball
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Launcher.Launcher
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/target.target
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Projectile.Projectile
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1066,7 +1074,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1298.400 Y=738.400
+WindowSize=X=1298.000 Y=738.000
 None=======
 InitiallyMaximized=True
 
@@ -1095,7 +1103,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1113,7 +1121,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
+UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -2207,26 +2215,26 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Timer
-MRUItem1=/Game/VRTemplate/Widgets/TimerDisplay
-MRUItem2=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem3=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem4=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem5=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem6=/Game/VRTemplate/Widgets/NewWidgetBlueprint
-MRUItem7=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem8=/Game/VRTemplate/Blueprints/Launcher
-MRUItem9=/Game/VRTemplate/Blueprints/Baseball
-MRUItem10=/Game/VRTemplate/Blueprints/Pistol
-MRUItem11=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem12=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem13=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem14=/Game/VRTemplate/Blueprints/target
-MRUItem15=/Game/VRTemplate/Audio/Music
-MRUItem16=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem17=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem18=/Game/VRTemplate/Blueprints/Music
-MRUItem19=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem0=/Game/VRTemplate/Blueprints/Projectile
+MRUItem1=/Game/VRTemplate/Blueprints/target
+MRUItem2=/Game/VRTemplate/Blueprints/Timer
+MRUItem3=/Game/VRTemplate/Blueprints/Launcher
+MRUItem4=/Game/VRTemplate/Blueprints/Baseball
+MRUItem5=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem6=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem7=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem8=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem9=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem10=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem11=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem12=/Game/VRTemplate/Blueprints/Pistol
+MRUItem13=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem14=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem15=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem16=/Game/VRTemplate/Audio/Music
+MRUItem17=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem18=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem19=/Game/VRTemplate/Blueprints/Music
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2502,11 +2510,11 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=
-SceneComponent=
+SceneComponent=StaticMeshComponent.Collision.Collision,
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
-Timer_C=StaticMeshComponent.Collision.Collision,
+Timer_C=
 PropertyWrapper=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 TimerDisplay_C=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
@@ -2519,4 +2527,6 @@ Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
 FinalWidget_C=
 FinalActor_C=StaticMeshComponent.Collision.Collision,
 VRGameMode_C=K2Node_FunctionEntry.Inputs.InputArgument0,
+BillboardComponent=StaticMeshComponent.Collision.Collision,
+BaseballBat_C=StaticMeshComponent.Collision.Collision,
 
