Retry Button working
Can now interact with buttons in VR

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,13 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
@@ -1004,14 +1004,65 @@ Projectile_C.Rendering=True
 Projectile_C.Actor=True
 Projectile_C.Collision=True
 Projectile_C.Input=True
+VRPawn_C.Default=True
+VRPawn_C.Tick=True
+VRPawn_C.Pawn=True
+VRPawn_C.Camera=True
+VRPawn_C.Replication=True
+VRPawn_C.Rendering=True
+VRPawn_C.Actor=True
+VRPawn_C.Collision=True
+VRPawn_C.Input=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+MotionControllerComponent.Variable=True
+MotionControllerComponent.TransformCommon=True
+MotionControllerComponent.Sockets=True
+MotionControllerComponent.ComponentTick=True
+MotionControllerComponent.Physics=True
+MotionControllerComponent.Collision=True
+MotionControllerComponent.Lighting=True
+MotionControllerComponent.Rendering=True
+MotionControllerComponent.Navigation=True
+MotionControllerComponent.Tags=True
+MotionControllerComponent.Visualization=True
+MotionControllerComponent.MotionController=True
+MotionControllerComponent.ComponentReplication=True
+MotionControllerComponent.Activation=True
+MotionControllerComponent.Cooking=True
+MotionControllerComponent.Events=True
+WidgetInteractionComponent.Variable=True
+WidgetInteractionComponent.TransformCommon=True
+WidgetInteractionComponent.Sockets=True
+WidgetInteractionComponent.Interaction=True
+WidgetInteractionComponent.Debugging=True
+WidgetInteractionComponent.ComponentTick=True
+WidgetInteractionComponent.Rendering=True
+WidgetInteractionComponent.Tags=True
+WidgetInteractionComponent.ComponentReplication=True
+WidgetInteractionComponent.Activation=True
+WidgetInteractionComponent.Cooking=True
+WidgetInteractionComponent.Events=True
+K2Node_InputAction.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Baseball.Baseball
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Launcher.Launcher
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/target.target
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Projectile.Projectile
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRPawn.VRPawn
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/FinalActor.FinalActor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2099,6 +2150,7 @@ StaticMesh.LODCustomMode=True
 FbxImportUI.Material=True
 PreviewMaterial.Material=True
 StaticMeshComponent.Collision=True
+WidgetComponent.Collision=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2215,26 +2267,26 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Projectile
-MRUItem1=/Game/VRTemplate/Blueprints/target
-MRUItem2=/Game/VRTemplate/Blueprints/Timer
-MRUItem3=/Game/VRTemplate/Blueprints/Launcher
-MRUItem4=/Game/VRTemplate/Blueprints/Baseball
-MRUItem5=/Game/VRTemplate/Widgets/TimerDisplay
-MRUItem6=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem7=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem8=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem9=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem10=/Game/VRTemplate/Widgets/NewWidgetBlueprint
-MRUItem11=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem12=/Game/VRTemplate/Blueprints/Pistol
-MRUItem13=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem14=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem15=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem16=/Game/VRTemplate/Audio/Music
-MRUItem17=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem18=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem19=/Game/VRTemplate/Blueprints/Music
+MRUItem0=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem1=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem2=/Game/VRTemplate/Blueprints/Projectile
+MRUItem3=/Game/VRTemplate/Blueprints/target
+MRUItem4=/Game/VRTemplate/Blueprints/Timer
+MRUItem5=/Game/VRTemplate/Blueprints/Launcher
+MRUItem6=/Game/VRTemplate/Blueprints/Baseball
+MRUItem7=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem8=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem9=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem10=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem11=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem12=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem13=/Game/VRTemplate/Blueprints/Pistol
+MRUItem14=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem15=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem16=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem17=/Game/VRTemplate/Audio/Music
+MRUItem18=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem19=/Game/VRTemplate/Audio/Fire_Cue
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2529,4 +2581,6 @@ FinalActor_C=StaticMeshComponent.Collision.Collision,
 VRGameMode_C=K2Node_FunctionEntry.Inputs.InputArgument0,
 BillboardComponent=StaticMeshComponent.Collision.Collision,
 BaseballBat_C=StaticMeshComponent.Collision.Collision,
+VRPawn_C=
+WidgetComponent=WidgetComponent.Collision.Collision,
 
